--- a/D-Learning/src/main/resources/static/user/css/style.css
+++ b/D-Learning/src/main/resources/static/user/css/style.css
@@ -5,6 +5,35 @@
     display: block;
 }
 
+.message {
+    color: red;
+    font-size: 14px;
+    visibility: hidden;
+    text-align: center;
+    margin-top: 40px;
+}
+
+
+.dropbtn {
+    background-color: transparent;
+    color: black;
+    padding: 0; /* Remove padding */
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    margin-left: 30px;
+
+}
+
+
+.dropbtn i {
+    font-size: 39px; /* Adjust the size of the icon */
+    color: #cccc; /* Set icon color */
+    box-sizing: border-box;
+}
+
 .page-wrapper {
     display: flex;
     flex-direction: column;
@@ -65,12 +94,15 @@
     /* Tạo khoảng cách giữa các chữ cái */
 }
 
+
 .header .menu {
     display: flex;
     align-items: center;
     flex-grow: 1;
     font-size: 17px;
     justify-content: center;
+    margin-left: 450px;
+    box-sizing: border-box;
 }
 
 
@@ -96,6 +128,7 @@
     border-radius: 5px;
     text-decoration: none;
     transition: background-color 0.3s ease;
+    margin-left: 31px;
 }
 
 .header .cta-button:hover {
@@ -136,13 +169,17 @@
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
-    border-radius: 5px;
+    border-radius: 8px;
 }
 
 .dropdown-content a {
     color: #fff;
     padding: 12px 16px;
     text-decoration: none;
+    display: block;
+}
+
+.show {
     display: block;
 }
 
@@ -1265,7 +1302,6 @@ table {
 
 .cart-icon:hover {
     color: #007bff;
-    /* Thay đổi màu sắc khi hover */
 }
 
 .logo img {
