--- a/D-Learning/src/main/resources/templates/authentication/register.html
+++ b/D-Learning/src/main/resources/templates/authentication/register.html
@@ -34,7 +34,7 @@
                 <input type="email" id="email" placeholder="mail@example.com">
             </div>
             <div class="form-group">
-                <label for="username">Tên đăng nhập</label>
+                <label for="username">Tên người dùng</label>
                 <input type="text" id="username" placeholder="Enter Username">
             </div>
             <div class="form-group">
